contracts/contracts-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contracts-ms-service
  labels:
    app: contracts-ms-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4006
      targetPort: 4006
  selector:
    app: contracts-ms-deployment
