contracts/contracts-ms/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contracts-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: contracts-ms.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contracts-ms-service
                port:
                  number: 4006
